--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/Solution/v16/Server/sqlite3
+/Core/obj
+/.vs/Solution/v16
