--- a/AutoMapperWebApplicationDemo/AutoMapperWebApplicationDemo.csproj
+++ b/AutoMapperWebApplicationDemo/AutoMapperWebApplicationDemo.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.0" />
   </ItemGroup>
 
 
