--- a/AbpAspNetCoreDemo/AbpAspNetCoreDemo.csproj
+++ b/AbpAspNetCoreDemo/AbpAspNetCoreDemo.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="2.1.1" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="2.1.1" />
   </ItemGroup>
 
 </Project>
